[gd_scene load_steps=23 format=2]

[ext_resource path="res://graphics/ludu.png" type="Texture" id=1]
[ext_resource path="res://graphics/ui_set_2.png" type="Texture" id=2]
[ext_resource path="res://scripts/singleton/swipedetector.gd" type="Script" id=3]
[ext_resource path="res://scripts/Home.gd" type="Script" id=4]
[ext_resource path="res://graphics/Design.png" type="Texture" id=5]
[ext_resource path="res://graphics/BeachBackground.png" type="Texture" id=6]
[ext_resource path="res://graphics/Design (1).png" type="Texture" id=7]
[ext_resource path="res://fonts/lazy_dog.ttf" type="DynamicFontData" id=8]

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 1 )
region_rect = Rect2( 55, 723, 1818, 411 )

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 5 )
region_rect = Rect2( 413, 24, 309, 293 )

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 5 )
region_rect = Rect2( 20, 30, 301, 277 )

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="DynamicFont" id=18]
size = 50
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 5 )
region_rect = Rect2( 474, 406, 250, 301 )
margin_left = 50.0
margin_top = 50.0
margin_bottom = 30.0

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 5 )
region_rect = Rect2( 89, 411, 247, 299 )
margin_top = 120.0

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 7 )
region_rect = Rect2( 1050, 1040, 1230, 1040 )
margin_bottom = 50.0

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 5 )
region_rect = Rect2( 411, 798, 309, 265 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 5 )
region_rect = Rect2( 26, 808, 310, 245 )

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 2 )
region_rect = Rect2( 682, 27, 645, 610 )
margin_top = 608.0

[sub_resource type="Animation" id=2]
resource_name = "HomePanelRight"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2160, 0 ), Vector2( 0, 0 ) ]
}

[node name="Home" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 7

[node name="RichTextLabel" type="Button" parent="."]
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.3
margin_top = -208.0
margin_bottom = -16.0
rect_min_size = Vector2( 1080, 192 )
custom_styles/disabled = SubResource( 7 )
disabled = true
shortcut_in_tooltip = false
button_mask = 0
text = "Ludumata"

[node name="Navigation" type="Control" parent="."]
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 0.75

[node name="GridContainer" type="GridContainer" parent="Navigation"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -440.0
margin_top = -491.0
margin_right = 440.0
margin_bottom = 139.0
columns = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Navigation/GridContainer"]
margin_right = 438.0
margin_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Navigation/GridContainer/VBoxContainer"]
margin_right = 438.0
margin_bottom = 153.0
size_flags_horizontal = 3
size_flags_vertical = 3
ratio = 1.5
stretch_mode = 1

[node name="PLAY" type="Button" parent="Navigation/GridContainer/VBoxContainer/AspectRatioContainer"]
margin_left = 104.25
margin_right = 333.75
margin_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 96 )
size_flags_vertical = 3
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 19 )
custom_styles/normal = SubResource( 17 )
shortcut_in_tooltip = false
keep_pressed_outside = true

[node name="Label" type="Label" parent="Navigation/GridContainer/VBoxContainer"]
margin_top = 157.0
margin_right = 438.0
margin_bottom = 208.0
custom_colors/font_color = Color( 0.643137, 0.454902, 0.454902, 1 )
custom_fonts/font = SubResource( 18 )
text = "PLAY"
align = 1
valign = 1

[node name="PLACEHOLDER3" type="Label" parent="Navigation/GridContainer"]
margin_left = 442.0
margin_top = 97.0
margin_right = 880.0
margin_bottom = 111.0

[node name="PLACEHOLDER2" type="Label" parent="Navigation/GridContainer"]
margin_top = 308.0
margin_right = 438.0
margin_bottom = 322.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Navigation/GridContainer"]
margin_left = 442.0
margin_top = 212.0
margin_right = 880.0
margin_bottom = 419.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Navigation/GridContainer/VBoxContainer2"]
margin_right = 438.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3
ratio = 1.5

[node name="SETTINGS" type="Button" parent="Navigation/GridContainer/VBoxContainer2/AspectRatioContainer"]
margin_left = 105.0
margin_right = 333.0
margin_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 96 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 11 )

[node name="Label" type="Label" parent="Navigation/GridContainer/VBoxContainer2"]
margin_top = 156.0
margin_right = 438.0
margin_bottom = 207.0
custom_colors/font_color = Color( 0.643137, 0.454902, 0.454902, 1 )
custom_fonts/font = SubResource( 18 )
text = "SETTINGS"
align = 1
valign = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="Navigation/GridContainer"]
margin_top = 423.0
margin_right = 438.0
margin_bottom = 630.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Navigation/GridContainer/VBoxContainer3"]
margin_right = 438.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3
ratio = 1.5

[node name="TUTORIAL" type="Button" parent="Navigation/GridContainer/VBoxContainer3/AspectRatioContainer"]
margin_left = 105.0
margin_right = 333.0
margin_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 96 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 15 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 13 )

[node name="Label" type="Label" parent="Navigation/GridContainer/VBoxContainer3"]
margin_top = 156.0
margin_right = 438.0
margin_bottom = 207.0
custom_colors/font_color = Color( 0.643137, 0.454902, 0.454902, 1 )
custom_fonts/font = SubResource( 18 )
text = "TUTORIAL"
align = 1
valign = 1

[node name="THETEAM" type="Button" parent="Navigation"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 66.0
margin_top = -101.0
margin_right = 504.0
margin_bottom = 521.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 96 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 540, 540 )
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Panel")
anims/HomePanelRight = SubResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1080.0
margin_right = 2160.0

[connection signal="resized" from="." to="." method="_on_Home_resized"]
[connection signal="pressed" from="Navigation/GridContainer/VBoxContainer/AspectRatioContainer/PLAY" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Navigation/GridContainer/VBoxContainer2/AspectRatioContainer/SETTINGS" to="." method="_on_SETTINGS_pressed"]
[connection signal="pressed" from="Navigation/GridContainer/VBoxContainer3/AspectRatioContainer/TUTORIAL" to="." method="_on_TUTORIAL_pressed"]
[connection signal="pressed" from="Navigation/THETEAM" to="." method="_on_Button_pressed"]
[connection signal="swipe_down" from="Camera2D" to="." method="_on_Camera2D_swipe_down"]
[connection signal="swipe_left" from="Camera2D" to="." method="_on_Camera2D_swipe_left"]
[connection signal="swipe_right" from="Camera2D" to="." method="_on_Camera2D_swipe_right"]
[connection signal="swipe_up" from="Camera2D" to="." method="_on_Camera2D_swipe_up"]
